# vidupe

./: .gitignore  CMakeLists.txt
res/: vidupe16.icns
src/: comparison.cpp  comparison.h  db.cpp  mainwindow.cpp  mainwindow.h  osutils.cpp  osutils.h  prefs.h  video.cpp  video.h
